tests/ui/unexpected_item.stderr
error: custom attribute panicked
  --> $DIR/unexpected_item.rs:15:1
   |
15 | #[use_ast]
   | ^^^^^^^^^^
   |
   = help: message: only methods are supported, consider moving Const(ImplItemConst { attrs: [], vis: Inherited, defaultness: None, const_token: Const, ident: Ident { ident: "XXX", span: #0 bytes(247..250) }, colon_token: Colon, ty: Path(TypePath { qself: None, path: Path { leading_colon: None, segments: [PathSegment { ident: Ident { ident: "usize", span: #0 bytes(252..257) }, arguments: None }] } }), eq_token: Eq, expr: Lit(ExprLit { attrs: [], lit: Int(LitInt { token: 0 }) }), semi_token: Semi }) to another impl block

error[E0599]: no method named `method` found for struct `Wrapper<Type>` in the current scope
  --> $DIR/unexpected_item.rs:8:33
   |
8  |     assert_eq!(Wrapper(0, Type).method(), 0);
   |                                 ^^^^^^ method not found in `Wrapper<Type>`
...
11 | struct Wrapper<T>(i32, T);
   | -------------------------- method `method` not found for this
